[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/kenney_pixelplatformer/Characters/character_0015.png" type="Texture" id=1]
[ext_resource path="res://assets/kenney_pixelplatformer/Characters/character_0016.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Redenemy.gd" type="Script" id=3]
[ext_resource path="res://assets/SFX2020/SFX2020/MonsterChangingDirection.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.165
height = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8.375, 4.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 8, 4.5 )

[sub_resource type="Animation" id=14]
resource_name = "Ends"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001

[sub_resource type="Animation" id=11]
resource_name = "turn"
length = 4.0

[node name="RedEnemy" type="KinematicBody2D"]
position = Vector2( 190, 0 )
scale = Vector2( 2, 2 )
z_index = 19
collision_layer = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.335, 3.8 )
shape = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "red"
frame = 1
playing = true

[node name="leftandright" type="Area2D" parent="."]
collision_layer = 8

[node name="Redcollision" type="CollisionShape2D" parent="leftandright"]
position = Vector2( 0.125, 3 )
shape = SubResource( 12 )

[node name="upanddown" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="upanddown"]
position = Vector2( -2.28882e-05, 2.5 )
rotation = 1.5708
shape = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/Ends = SubResource( 14 )
anims/RESET = SubResource( 10 )
anims/turn = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="body_entered" from="leftandright" to="." method="_on_leftandright_body_entered"]
[connection signal="body_entered" from="upanddown" to="." method="_on_upanddown_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
